--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
       --accent:#38bdf8;
       --glow: rgba(56,189,248,.25);
 
+      /* Colores para las cajas de la izquierda */
+      --green-1:#34d399; --green-2:#10b981; --green-b:#0b8c6d;
+      --blue-1:#3b82f6;  --blue-2:#2563eb;  --blue-b:#1d4ed8;
+      --white-1:#ffffff; --white-2:#f3f4f6; --white-txt:#0e162c;
+
       /* Ancho de ambos sidebars */
       --menuW: clamp(280px, 24vw, 360px);
     }
@@ -34,7 +39,8 @@
     body{
       margin:0;
       font-family:Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      background: radial-gradient(1000px 600px at 10% -10%, #162347 0%, transparent 60%), linear-gradient(180deg, var(--card) 0%, var(--card2) 100%);
+      background: radial-gradient(1000px 600px at 10% -10%, #162347 0%, transparent 60%),
+                  linear-gradient(180deg, var(--card) 0%, var(--card2) 100%);
       color:var(--text);
       line-height:1.6;
     }
@@ -113,28 +119,6 @@
       font-size:clamp(1.2rem, 0.9rem + 1vw, 1.6rem);
       letter-spacing:.3px; color:#d9e6ff;
     }
-
-    /* ====== MENÚ LATERAL IZQUIERDA (nuevo) ====== */
-    .left-menu{
-      position:fixed;
-      left:18px;
-      top:16px;
-      bottom:16px;
-      width:var(--menuW);
-      background:linear-gradient(180deg, #111a31, #0c1427);
-      border:1px solid var(--stroke);
-      border-radius:14px;
-      padding:16px;
-      box-shadow: 0 12px 30px rgba(0,0,0,.35), 0 0 0 1px rgba(255,255,255,.03) inset;
-      z-index:40;
-      display:flex; flex-direction:column; overflow:auto; gap:10px;
-    }
-    .left-menu h3{
-      margin:0; text-align:center;
-      font-size:clamp(1.2rem, 0.9rem + 1vw, 1.6rem);
-      letter-spacing:.3px; color:#d9e6ff;
-    }
-
     .svc-list{list-style:none; margin:0; padding:4px 0; display:grid; gap:10px}
     .svc-list a{
       display:flex; align-items:center; justify-content:space-between;
@@ -152,6 +136,56 @@
       background:#0f1b36; border-color:#28406e; box-shadow:0 6px 20px rgba(56,189,248,.18);
     }
     .svc-list a:hover::after{ transform: translateX(2px); opacity:1 }
+
+    /* ====== MENÚ LATERAL IZQUIERDA (Cajas) ====== */
+    .left-menu{
+      position:fixed;
+      left:18px;
+      top:16px;
+      bottom:16px;
+      width:var(--menuW);
+      background:linear-gradient(180deg, #111a31, #0c1427);
+      border:1px solid var(--stroke);
+      border-radius:14px;
+      padding:16px;
+      box-shadow: 0 12px 30px rgba(0,0,0,.35), 0 0 0 1px rgba(255,255,255,.03) inset;
+      z-index:40;
+      display:flex; flex-direction:column; overflow:auto; gap:10px;
+    }
+    .left-tiles{ display:grid; gap:12px; }
+
+    .tile{
+      display:flex; align-items:center; justify-content:space-between;
+      padding:16px; border-radius:12px; font-weight:700;
+      min-height:120px; text-decoration:none;
+      border:1px solid transparent; color:#fff;
+      box-shadow:0 6px 18px rgba(0,0,0,.18), 0 0 0 1px rgba(255,255,255,.03) inset;
+      transition: transform .06s ease, box-shadow .2s ease, background .2s ease, border-color .2s ease, filter .2s ease;
+    }
+    .tile strong{ font-size:1.05rem; letter-spacing:.2px; }
+    .tile::after{
+      content:"›"; opacity:.9; font-weight:800; transform:translateX(0);
+      transition: transform .15s ease, opacity .2s ease;
+    }
+    .tile:hover{ filter:brightness(1.04); box-shadow:0 10px 28px rgba(56,189,248,.18); }
+    .tile:hover::after{ transform:translateX(2px); }
+
+    /* Colores específicos */
+    .tile--green{
+      background:linear-gradient(180deg, var(--green-1), var(--green-2));
+      border-color: var(--green-b);
+      color:#fff;
+    }
+    .tile--blue{
+      background:linear-gradient(180deg, var(--blue-1), var(--blue-2));
+      border-color: var(--blue-b);
+      color:#fff;
+    }
+    .tile--white{
+      background:linear-gradient(180deg, var(--white-1), var(--white-2));
+      border-color:#e5e7eb;
+      color:var(--white-txt); /* texto y chevron oscuros para contraste */
+    }
 
     /* Botones sociales al fondo del menú derecho */
     .side-cta{ margin-top:auto; display:grid; gap:10px; }
@@ -212,13 +246,13 @@
         </div>
       </header>
 
-      <!-- ====== MENÚ LATERAL IZQUIERDA (nuevo) ====== -->
-      <nav class="left-menu" aria-labelledby="left-title">
-        <ul class="svc-list">
-          <li><a href="#" title="Logros">Logros</a></li>
-          <li><a href="#" title="Sistemas de Apoyo">Sistemas de Apoyo</a></li>
-          <li><a href="#" title="Desarrollos">Desarrollos</a></li>
-        </ul>
+      <!-- ====== MENÚ LATERAL IZQUIERDA (cajas) ====== -->
+      <nav class="left-menu" aria-label="Atajos de contenido">
+        <div class="left-tiles">
+          <a class="tile tile--green" href="#logros" title="Logros"><strong>Logros</strong></a>
+          <a class="tile tile--blue" href="#sistemas" title="Sistemas de Apoyo"><strong>Sistemas de Apoyo</strong></a>
+          <a class="tile tile--white" href="#desarrollos" title="Desarrollos"><strong>Desarrollos</strong></a>
+        </div>
       </nav>
 
       <!-- ====== MENÚ LATERAL DERECHA (Servicios) ====== -->
@@ -254,7 +288,7 @@
       </nav>
 
       <!-- Descripción -->
-      <section class="panel" aria-labelledby="about-title">
+      <section class="panel" aria-labelledby="about-title" id="logros">
         <h2 id="about-title" style="margin:0 0 6px">Trading algorítmico con validación cuantitativa</h2>
         <p style="margin:0">
           <strong>DGO Trading</strong> desarrolla trading algorítmico bajo un marco de validación cuantitativa.
@@ -264,7 +298,7 @@
       </section>
 
       <!-- Widget -->
-      <div class="panel">
+      <div class="panel" id="sistemas">
         <div class="widget" id="widget">
           <span class="badge">MQL5 Widget</span>
           <div style="width:100%;text-align:center;line-height:26px;">
@@ -279,7 +313,7 @@
       </div>
 
       <!-- Anuncio -->
-      <div class="ad-wrap">
+      <div class="ad-wrap" id="desarrollos">
         <div class="ad-inner">
           <ins class="dcmads" style="display:inline-block;width:728px;height:90px"
             data-dcm-placement="N800570.2009906CELLXPERT/B24282330.340389488"
