--- a/index.html
+++ b/index.html
@@ -249,11 +249,12 @@
       <!-- ====== MENÚ LATERAL IZQUIERDA (cajas) ====== -->
       <nav class="left-menu" aria-label="Atajos de contenido">
         <div class="left-tiles">
-          <a class="tile tile--green" href="#logros" title="Logros"><strong>Logros</strong></a>
-          <a class="tile tile--blue" href="#sistemas" title="Sistemas de Apoyo"><strong>Sistemas de Apoyo</strong></a>
-          <a class="tile tile--white" href="#desarrollos" title="Desarrollos"><strong>Desarrollos</strong></a>
+          <a class="tile tile--green" href="logros/index.html" title="Logros"><strong>Logros</strong></a>
+          <a class="tile tile--blue" href="sistemas-de-apoyo/index.html" title="Sistemas de Apoyo"><strong>Sistemas de Apoyo</strong></a>
+          <a class="tile tile--white" href="desarrollos/index.html" title="Desarrollos"><strong>Desarrollos</strong></a>
         </div>
       </nav>
+
 
       <!-- ====== MENÚ LATERAL DERECHA (Servicios) ====== -->
       <nav class="side-menu" aria-labelledby="svc-title">
