--- a/index.html
+++ b/index.html
@@ -292,9 +292,8 @@
       <section class="panel" aria-labelledby="about-title" id="logros">
         <h2 id="about-title" style="margin:0 0 6px">Trading algorítmico con validación cuantitativa</h2>
         <p style="margin:0">
-          <strong>DGO Trading</strong> desarrolla trading algorítmico bajo un marco de validación cuantitativa.
-          Sus estrategias integran modelos estadísticos y criterio discrecional codificado, contrastados con evidencia histórica,
-          calibrados paramétricamente y verificados de forma progresiva en ventanas temporales sucesivas, con foco en la consistencia y la robustez.
+          DGO Trading transforma conocimiento de mercado en algoritmos. Bajo un marco cuantitativo, 
+          cada idea se contrasta con datos, se ajusta con precisión y se valida para sostener la consistencia en el tiempo.
         </p>
       </section>
 
