--- a/index.html
+++ b/index.html
@@ -290,9 +290,8 @@
 
       <!-- Descripción -->
       <section class="panel" aria-labelledby="about-title" id="logros">
-        <h2 id="about-title" style="margin:0 0 6px">Trading algorítmico con validación cuantitativa</h2>
-        <p style="margin:0">
-          DGO Trading transforma conocimiento de mercado en algoritmos. Bajo un marco cuantitativo, 
+        <p style="margin:0 0 4px">
+          DGO transforma conocimiento de mercado en algoritmos. Bajo un marco cuantitativo, 
           cada idea se contrasta con datos, se ajusta con precisión y se valida para sostener la consistencia en el tiempo.
         </p>
       </section>
