--- a/index.html
+++ b/index.html
@@ -290,12 +290,11 @@
 
       <!-- Descripción -->
       <section class="panel" aria-labelledby="about-title" id="logros">
-        <p style="margin:0 0 6px; font-size:1.2rem; line-height:1.75;">
+        <p style="margin:0 0 6px; font-size:1.2rem; line-height:1.75; font-weight:700;">
           DGO transforma conocimiento de mercado en algoritmos. Bajo un marco cuantitativo, 
           cada idea se contrasta con datos, se ajusta con precisión y se valida para sostener la consistencia en el tiempo.
         </p>
       </section>
-
 
       <!-- Widget -->
       <div class="panel" id="sistemas">
