--- a/servicios/codifica-tu-estrategia.html
+++ b/servicios/codifica-tu-estrategia.html
@@ -76,7 +76,9 @@
 
       <header>
         <a href="../index.html" class="btn ghost" aria-label="Volver al inicio">← Volver</a>
-        <img src="../logo.png" alt="Logo DGO Trading">
+        <img src="../logo.png" alt="Logo DGO Trading"
+          width="360" height="360" style="height:auto; border-radius:12px; border:1px solid #1d2947;">
+
         <div>
           <h1>Codifica tu estrategia</h1>
           <div class="muted">De la idea al algoritmo (MQL5 / MT5)</div>
