--- a/servicios/codifica-tu-estrategia.html
+++ b/servicios/codifica-tu-estrategia.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DGO Trading — Codifica tu estrategia</title>
-  <meta name="description" content="Convierte tu idea de trading en un algoritmo fiable (MQL5 / MT5). Desarrollo de EAs e indicadores a medida, con backtests y soporte.">
+  <meta name="description" content="Convierte tu idea de trading en un algoritmo fiable (Python / MQL5 ). Desarrollo de EAs e indicadores a medida, con backtests y soporte.">
   <meta property="og:title" content="DGO Trading — Codifica tu estrategia">
-  <meta property="og:description" content="Desarrollo profesional en MQL5: de la idea al algoritmo, con pruebas y soporte.">
+  <meta property="og:description" content="Desarrollo profesional en MQL5: de la idea al algoritmo.">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
 
@@ -86,9 +86,8 @@
       </header>
 
       <section class="panel">
-        <h2 style="margin-top:0">Descripción</h2>
         <p>
-          Desarrollo <strong>Asesores Expertos</strong> e <strong>Indicadores</strong> a medida en MQL5 para MetaTrader 5.
+          Desarrollo <strong>Asesores Expertos</strong> e <strong>Indicadores</strong> a medida en MQL5 y Python para MetaTrader 5.
           Partimos de tus reglas de trading y las llevamos a código con una lógica clara, gestión de riesgo y pruebas
           históricas para validar el comportamiento antes de operar en vivo.
         </p>
@@ -101,7 +100,7 @@
             <svg viewBox="0 0 24 24" aria-hidden="true">
               <path d="M12 0C5.372 0 0 5.373 0 12s5.372 12 12 12 12-5.373 12-12S18.628 0 12 0zm5.802 7.651l-2.1 9.905c-.158.696-.572.866-1.158.54l-3.197-2.357-1.542 1.485c-.171.171-.314.314-.643.314l.229-3.241 5.897-5.321c.256-.229-.058-.358-.397-.129l-7.287 4.586-3.135-.98c-.681-.214-.696-.681.142-1.006l12.257-4.727c.572-.214 1.072.129.887 1.006z"/>
             </svg>
-            Hablar por Telegram
+            Soporte por Telegram
           </a>
         </div>
       </section>
