--- a/servicios/codifica-tu-estrategia.html
+++ b/servicios/codifica-tu-estrategia.html
@@ -87,9 +87,8 @@
 
       <section class="panel">
         <p>
-          Desarrollo <strong>Asesores Expertos</strong> e <strong>Indicadores</strong> a medida en MQL5 y Python para MetaTrader 5.
-          Partimos de tus reglas de trading y las llevamos a código con una lógica clara, gestión de riesgo y pruebas
-          históricas para validar el comportamiento antes de operar en vivo.
+          Se desarrollan Asesores Expertos e Indicadores a medida en MQL5 y Python para MetaTrader 5, 
+          partiendo de las reglas de trading del cliente y llevándolas a código con lógica clara, gestión de riesgo y pruebas históricas antes de la operativa en vivo.
         </p>
         <p class="muted" style="margin-top:-6px">
           Entregables habituales: ejecutable (.ex5), parámetros configurables, backtest de referencia y breve manual de uso.
