--- a/servicios/academia.html
+++ b/servicios/academia.html
@@ -83,7 +83,9 @@
 
       <header>
         <a href="../index.html" class="btn ghost" aria-label="Volver al inicio">← Volver</a>
-        <img src="../logo.png" alt="Logo DGO Trading">
+        <img src="../logo.png" alt="Logo DGO Trading"
+          style="height:59px; width:auto; border-radius:12px; border:1px solid #1d2947; box-shadow:0 4px 18px rgba(0,0,0,.35)">
+
         <div>
           <h1>Academia</h1>
         </div>
