--- a/sistemas-de-apoyo/index.html
+++ b/sistemas-de-apoyo/index.html
@@ -127,6 +127,7 @@
       <header>
         <a href="../index.html" class="btn ghost" aria-label="Volver al inicio">← Volver</a>
         <img src="../logo.png" alt="Logo DGO Trading" class="brand">
+          style="height:59px; width:auto; border-radius:12px; border:1px solid #1d2947; box-shadow:0 4px 18px rgba(0,0,0,.35)">
         <div>
           <h1>Sistemas de Apoyo</h1>
           <div class="muted">Accesos directos y recursos para ejecutar con claridad</div>
