--- a/sistemas-de-apoyo/index.html
+++ b/sistemas-de-apoyo/index.html
@@ -151,8 +151,8 @@
           <!-- ForexFactory -->
           <a class="link-card" href="https://www.forexfactory.com/calendar" target="_blank" rel="noopener" aria-label="Abrir ForexFactory Calendar">
             <div class="logo">
-              <!-- Sube tu logo a ./logos/forexfactory.svg o .png -->
-              <img src="./logos/forexfactory.svg" alt="ForexFactory Logo" onerror="this.src='./logos/forexfactory.png'">
+              <!-- Sube tu logo PNG a ./logos/forexfactory.png -->
+              <img src="./logos/forexfactory.png" alt="ForexFactory Logo">
             </div>
             <div class="meta">
               <strong>ForexFactory</strong>
@@ -163,8 +163,8 @@
           <!-- TradingView -->
           <a class="link-card" href="https://es.tradingview.com/" target="_blank" rel="noopener" aria-label="Abrir TradingView">
             <div class="logo">
-              <!-- Sube tu logo a ./logos/tradingview.svg o .png -->
-              <img src="./logos/tradingview.svg" alt="TradingView Logo" onerror="this.src='./logos/tradingview.png'">
+              <!-- Sube tu logo PNG a ./logos/tradingview.png -->
+              <img src="./logos/tradingview.png" alt="TradingView Logo">
             </div>
             <div class="meta">
               <strong>TradingView</strong>
@@ -175,8 +175,8 @@
           <!-- MetaTrader 5 -->
           <a class="link-card" href="https://www.metatrader5.com/es" target="_blank" rel="noopener" aria-label="Abrir MetaTrader 5">
             <div class="logo">
-              <!-- Sube tu logo a ./logos/metatrader5.svg o .png -->
-              <img src="./logos/metatrader5.svg" alt="MetaTrader 5 Logo" onerror="this.src='./logos/metatrader5.png'">
+              <!-- Sube tu logo PNG a ./logos/metatrader5.png -->
+              <img src="./logos/metatrader5.png" alt="MetaTrader 5 Logo">
             </div>
             <div class="meta">
               <strong>MetaTrader 5</strong>
