--- a/sistemas-de-apoyo/index.html
+++ b/sistemas-de-apoyo/index.html
@@ -151,8 +151,8 @@
           <!-- ForexFactory -->
           <a class="link-card" href="https://www.forexfactory.com/calendar" target="_blank" rel="noopener" aria-label="Abrir ForexFactory Calendar">
             <div class="logo">
-              <!-- Sube tu logo PNG a ./logos/forexfactory.png -->
-              <img src="./logos/forexfactory.png" alt="ForexFactory Logo">
+              <!-- Logos PNG colocados en esta misma carpeta -->
+              <img src="./forexfactory.png" alt="ForexFactory Logo">
             </div>
             <div class="meta">
               <strong>ForexFactory</strong>
@@ -163,8 +163,7 @@
           <!-- TradingView -->
           <a class="link-card" href="https://es.tradingview.com/" target="_blank" rel="noopener" aria-label="Abrir TradingView">
             <div class="logo">
-              <!-- Sube tu logo PNG a ./logos/tradingview.png -->
-              <img src="./logos/tradingview.png" alt="TradingView Logo">
+              <img src="./tradingview.png" alt="TradingView Logo">
             </div>
             <div class="meta">
               <strong>TradingView</strong>
@@ -175,8 +174,7 @@
           <!-- MetaTrader 5 -->
           <a class="link-card" href="https://www.metatrader5.com/es" target="_blank" rel="noopener" aria-label="Abrir MetaTrader 5">
             <div class="logo">
-              <!-- Sube tu logo PNG a ./logos/metatrader5.png -->
-              <img src="./logos/metatrader5.png" alt="MetaTrader 5 Logo">
+              <img src="./metatrader5.png" alt="MetaTrader 5 Logo">
             </div>
             <div class="meta">
               <strong>MetaTrader 5</strong>
@@ -191,16 +189,27 @@
         <h2 id="books-title" style="margin:0 0 10px">Libros de trading</h2>
         <div class="books">
           <p class="muted" style="margin:0">
-            Sube tus PDFs a <code>/sistemas-de-apoyo/libros/</code> y añade cada libro como un ítem en la lista de abajo.
+            Sube tus PDFs a <code>/sistemas-de-apoyo/</code> y añádelos a la lista.
           </p>
 
           <ul class="book-list" id="book-list">
-            <!-- Ejemplo: descomenta y duplica para cada libro que subas
+            <!-- Libro subido -->
             <li class="book">
               <div class="icon" aria-hidden="true">
                 <svg viewBox="0 0 24 24" width="20" height="20"><path fill="currentColor" d="M6 2h7l5 5v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm7 1.5V8h4.5L13 3.5zM8 12h8v1.6H8V12zm0 3h8v1.6H8V15z"/></svg>
               </div>
-              <a href="./libros/Nombre-del-Libro.pdf" target="_blank" rel="noopener">Nombre del Libro (PDF)</a>
+              <!-- usa el nombre exacto del archivo que subiste -->
+              <a href="./el_m%C3%A9todo_wyckof.pdf" target="_blank" rel="noopener">
+                El método Wyckof (PDF)
+              </a>
+            </li>
+
+            <!-- Ejemplos para futuros libros:
+            <li class="book">
+              <div class="icon" aria-hidden="true">
+                <svg viewBox="0 0 24 24" width="20" height="20"><path fill="currentColor" d="M6 2h7l5 5v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm7 1.5V8h4.5L13 3.5zM8 12h8v1.6H8V12zm0 3h8v1.6H8V15z"/></svg>
+              </div>
+              <a href="./nombre-del-libro.pdf" target="_blank" rel="noopener">Nombre del Libro (PDF)</a>
             </li>
             -->
           </ul>
