--- a/sistemas-de-apoyo/index.html
+++ b/sistemas-de-apoyo/index.html
@@ -199,7 +199,7 @@
                 <svg viewBox="0 0 24 24" width="20" height="20"><path fill="currentColor" d="M6 2h7l5 5v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm7 1.5V8h4.5L13 3.5zM8 12h8v1.6H8V12zm0 3h8v1.6H8V15z"/></svg>
               </div>
               <!-- usa el nombre exacto del archivo que subiste -->
-              <a href="./el_m%C3%A9todo_wyckof.pdf" target="_blank" rel="noopener">
+              <a href="./el_metodo_wyckof.pdf" target="_blank" rel="noopener">
                 El método Wyckof (PDF)
               </a>
             </li>
