--- a/sistemas-de-apoyo/index.html
+++ b/sistemas-de-apoyo/index.html
@@ -125,7 +125,6 @@
       padding-top:8px; border-top:1px solid rgba(255,255,255,.06);
     }
 
-    /* Visually hidden for accessibility (if ever needed) */
     .sr-only{position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0}
   </style>
 </head>
@@ -148,38 +147,19 @@
         <h2 id="tools-title" style="margin:0 0 10px">Herramientas</h2>
 
         <div class="links">
-          <!-- ForexFactory -->
           <a class="link-card" href="https://www.forexfactory.com/calendar" target="_blank" rel="noopener" aria-label="Abrir ForexFactory Calendar">
-            <div class="logo">
-              <!-- Logos PNG colocados en esta misma carpeta -->
-              <img src="./forexfactory.png" alt="ForexFactory Logo">
-            </div>
-            <div class="meta">
-              <strong>ForexFactory</strong>
-              <span>Calendario económico</span>
-            </div>
+            <div class="logo"><img src="./forexfactory.png" alt="ForexFactory Logo"></div>
+            <div class="meta"><strong>ForexFactory</strong><span>Calendario económico</span></div>
           </a>
 
-          <!-- TradingView -->
           <a class="link-card" href="https://es.tradingview.com/" target="_blank" rel="noopener" aria-label="Abrir TradingView">
-            <div class="logo">
-              <img src="./tradingview.png" alt="TradingView Logo">
-            </div>
-            <div class="meta">
-              <strong>TradingView</strong>
-              <span>Gráficos y análisis</span>
-            </div>
+            <div class="logo"><img src="./tradingview.png" alt="TradingView Logo"></div>
+            <div class="meta"><strong>TradingView</strong><span>Gráficos y análisis</span></div>
           </a>
 
-          <!-- MetaTrader 5 -->
           <a class="link-card" href="https://www.metatrader5.com/es" target="_blank" rel="noopener" aria-label="Abrir MetaTrader 5">
-            <div class="logo">
-              <img src="./metatrader5.png" alt="MetaTrader 5 Logo">
-            </div>
-            <div class="meta">
-              <strong>MetaTrader 5</strong>
-              <span>Plataforma de ejecución</span>
-            </div>
+            <div class="logo"><img src="./metatrader5.png" alt="MetaTrader 5 Logo"></div>
+            <div class="meta"><strong>MetaTrader 5</strong><span>Plataforma de ejecución</span></div>
           </a>
         </div>
       </section>
@@ -193,30 +173,30 @@
           </p>
 
           <ul class="book-list" id="book-list">
-            <!-- Libro subido -->
             <li class="book">
               <div class="icon" aria-hidden="true">
                 <svg viewBox="0 0 24 24" width="20" height="20"><path fill="currentColor" d="M6 2h7l5 5v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm7 1.5V8h4.5L13 3.5zM8 12h8v1.6H8V12zm0 3h8v1.6H8V15z"/></svg>
               </div>
-              <!-- usa el nombre exacto del archivo que subiste -->
-              <a href="./el_metodo_wyckof.pdf" target="_blank" rel="noopener">
-                El método Wyckof (PDF)
-              </a>
+              <a href="./el_metodo_wyckof.pdf" target="_blank" rel="noopener">El método Wyckof (PDF)</a>
             </li>
 
-            <!-- Ejemplos para futuros libros:
             <li class="book">
               <div class="icon" aria-hidden="true">
                 <svg viewBox="0 0 24 24" width="20" height="20"><path fill="currentColor" d="M6 2h7l5 5v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm7 1.5V8h4.5L13 3.5zM8 12h8v1.6H8V12zm0 3h8v1.6H8V15z"/></svg>
               </div>
-              <a href="./nombre-del-libro.pdf" target="_blank" rel="noopener">Nombre del Libro (PDF)</a>
+              <a href="./exhuberancia-irracional.pdf" target="_blank" rel="noopener">Exhuberancia irracional (PDF)</a>
             </li>
-            -->
+
+            <li class="book">
+              <div class="icon" aria-hidden="true">
+                <svg viewBox="0 0 24 24" width="20" height="20"><path fill="currentColor" d="M6 2h7l5 5v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm7 1.5V8h4.5L13 3.5zM8 12h8v1.6H8V12zm0 3h8v1.6H8V15z"/></svg>
+              </div>
+              <a href="./los-magos-del-mercado.pdf" target="_blank" rel="noopener">Los magos del mercado (PDF)</a>
+            </li>
           </ul>
         </div>
       </section>
 
-      <!-- Footer -->
       <div class="footer">
         © <span id="yr"></span> DGO Trading. Todos los derechos reservados.
       </div>
