--- a/sistemas-de-apoyo/index.html
+++ b/sistemas-de-apoyo/index.html
@@ -47,15 +47,11 @@
     }
     .btn.ghost{background:transparent; border:1px solid #28406e; color:var(--text)}
     .btn:active{transform:translateY(1px); box-shadow:0 4px 12px rgba(14,165,233,.25)}
+    .btn.small{padding:8px 12px; font-size:.9rem}
 
-    /* Logo del header a 59px */
-    .brand img,
-    img.brand{
-      height:59px;
-      width:auto;
-      border-radius:12px;
-      border:1px solid #1d2947;
-      box-shadow:0 4px 18px rgba(0,0,0,.35);
+    /* Logo header 59px */
+    .brand img, img.brand{
+      height:59px; width:auto; border-radius:12px; border:1px solid #1d2947; box-shadow:0 4px 18px rgba(0,0,0,.35)
     }
 
     h1{margin:0; font-size:clamp(1.6rem, 1.1rem + 2vw, 2.25rem)}
@@ -95,7 +91,6 @@
     .link-card .meta strong{font-size:1.02rem; letter-spacing:.2px}
     .link-card .meta span{font-size:.9rem; color:var(--muted)}
 
-    /* Responsive columns */
     @media (max-width: 1024px){ .link-card{grid-column: span 6} }
     @media (max-width: 680px){ .link-card{grid-column: span 12} }
 
@@ -107,25 +102,26 @@
     }
     .book{
       grid-column: span 6;
-      display:flex; align-items:center; gap:12px;
+      display:flex; align-items:center; justify-content:space-between; gap:12px;
       background:#0f1731; border:1px solid #25365f; border-radius:12px; padding:12px;
     }
+    .book .info{display:flex; align-items:center; gap:12px; min-width:0}
     .book .icon{
       width:36px; height:36px; border-radius:8px; display:grid; place-items:center;
-      background:#0e162c; border:1px solid #1d2947;
+      background:#0e162c; border:1px solid #1d2947; color:#9fb0d9;
     }
-    .book a{
-      color:var(--text); text-decoration:none; font-weight:600;
+    .book .title{
+      color:var(--text); text-decoration:none; font-weight:700; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;
     }
-    .book a:hover{text-decoration:underline}
-    @media (max-width: 780px){ .book{grid-column: span 12} }
+    .book .title:hover{text-decoration:underline}
+    @media (max-width: 780px){
+      .book{grid-column: span 12}
+    }
 
     .footer{
       margin-top:auto; text-align:center; color:var(--muted); font-size:.88rem;
       padding-top:8px; border-top:1px solid rgba(255,255,255,.06);
     }
-
-    .sr-only{position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0}
   </style>
 </head>
 <body>
@@ -167,34 +163,48 @@
       <!-- Libros de trading -->
       <section class="panel" aria-labelledby="books-title">
         <h2 id="books-title" style="margin:0 0 10px">Libros de trading</h2>
-        <div class="books">
-          <p class="muted" style="margin:0">
-            Sube tus PDFs a <code>/sistemas-de-apoyo/</code> y añádelos a la lista.
-          </p>
 
-          <ul class="book-list" id="book-list">
-            <li class="book">
+        <ul class="book-list" id="book-list">
+          <!-- Libro 1 -->
+          <li class="book">
+            <div class="info">
               <div class="icon" aria-hidden="true">
-                <svg viewBox="0 0 24 24" width="20" height="20"><path fill="currentColor" d="M6 2h7l5 5v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm7 1.5V8h4.5L13 3.5zM8 12h8v1.6H8V12zm0 3h8v1.6H8V15z"/></svg>
+                <!-- Icono de libro (SVG inline) -->
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                  <path d="M6 2h9a3 3 0 0 1 3 3v13a2 2 0 0 1-2 2H8a3 3 0 0 0-3 3V5a3 3 0 0 1 3-3zM8 6h8v2H8V6zm0 4h8v2H8v-2z"/>
+                </svg>
               </div>
-              <a href="./el_metodo_wyckof.pdf" target="_blank" rel="noopener">El método Wyckof (PDF)</a>
-            </li>
+              <a class="title" href="./el_metodo_wyckof.pdf" target="_blank" rel="noopener">El método Wyckof (PDF)</a>
+            </div>
+            <a class="btn small" href="./el_metodo_wyckof.pdf" target="_blank" rel="noopener" aria-label="Abrir El método Wyckof (PDF)">Abrir</a>
+          </li>
 
-            <li class="book">
+          <!-- Libro 2 -->
+          <li class="book">
+            <div class="info">
               <div class="icon" aria-hidden="true">
-                <svg viewBox="0 0 24 24" width="20" height="20"><path fill="currentColor" d="M6 2h7l5 5v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm7 1.5V8h4.5L13 3.5zM8 12h8v1.6H8V12zm0 3h8v1.6H8V15z"/></svg>
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                  <path d="M6 2h9a3 3 0 0 1 3 3v13a2 2 0 0 1-2 2H8a3 3 0 0 0-3 3V5a3 3 0 0 1 3-3zM8 6h8v2H8V6zm0 4h8v2H8v-2z"/>
+                </svg>
               </div>
-              <a href="./exhuberancia-irracional.pdf" target="_blank" rel="noopener">Exhuberancia irracional (PDF)</a>
-            </li>
+              <a class="title" href="./exhuberancia-irracional.pdf" target="_blank" rel="noopener">Exhuberancia irracional (PDF)</a>
+            </div>
+            <a class="btn small" href="./exhuberancia-irracional.pdf" target="_blank" rel="noopener" aria-label="Abrir Exhuberancia irracional (PDF)">Abrir</a>
+          </li>
 
-            <li class="book">
+          <!-- Libro 3 -->
+          <li class="book">
+            <div class="info">
               <div class="icon" aria-hidden="true">
-                <svg viewBox="0 0 24 24" width="20" height="20"><path fill="currentColor" d="M6 2h7l5 5v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm7 1.5V8h4.5L13 3.5zM8 12h8v1.6H8V12zm0 3h8v1.6H8V15z"/></svg>
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                  <path d="M6 2h9a3 3 0 0 1 3 3v13a2 2 0 0 1-2 2H8a3 3 0 0 0-3 3V5a3 3 0 0 1 3-3zM8 6h8v2H8V6zm0 4h8v2H8v-2z"/>
+                </svg>
               </div>
-              <a href="./los-magos-del-mercado.pdf" target="_blank" rel="noopener">Los magos del mercado (PDF)</a>
-            </li>
-          </ul>
-        </div>
+              <a class="title" href="./los-magos-del-mercado.pdf" target="_blank" rel="noopener">Los magos del mercado (PDF)</a>
+            </div>
+            <a class="btn small" href="./los-magos-del-mercado.pdf" target="_blank" rel="noopener" aria-label="Abrir Los magos del mercado (PDF)">Abrir</a>
+          </li>
+        </ul>
       </section>
 
       <div class="footer">
