--- a/desarrollos/index.html
+++ b/desarrollos/index.html
@@ -76,21 +76,27 @@
       overflow:hidden;
       display:flex; flex-direction:column;
     }
+
+    /* >>> Ajuste para ver la imagen completa <<< */
     .thumb{
-      width:100%; height:180px;
+      width:100%;
+      aspect-ratio: 16 / 9;          /* Mantiene tarjetas uniformes */
       background:#0e162c;
       border-bottom:1px solid #1d2947;
       display:grid; place-items:center;
+      padding:10px;                  /* margen interno para que no pegue al borde */
     }
     .thumb img{
-      width:100%; height:100%; object-fit:cover; display:block;
+      width:100%; height:100%;
+      object-fit:contain;            /* muestra toda la imagen sin recortar */
+      display:block;
     }
+
     .dev-body{
       padding:12px; display:flex; flex-direction:column; gap:6px;
     }
     .dev-title{margin:0; font-size:1.05rem; letter-spacing:.2px}
     .dev-by{margin:0; color:var(--muted); font-size:.9rem}
-    .dev-notes{margin:4px 0 0; color:#cfe3ff; font-size:.9rem; opacity:.9}
 
     /* Responsive */
     @media (max-width: 1200px){ .dev-card{grid-column: span 4} } /* 3 por fila */
@@ -124,60 +130,44 @@
         <div class="grid">
           <!-- dgotrader_6 -->
           <article class="dev-card">
-            <div class="thumb"><img src="./megavol.png" alt="Megavol — robot"></div>
-            <div class="dev-body">
-              <p class="dev-by"><strong>Developed by:</strong> dgotrader_6</p>
-            </div>
+            <div class="thumb"><img src="./megavol.png" alt="Megavol — robot" loading="lazy" decoding="async"></div>
+            <div class="dev-body"><p class="dev-by"><strong>Developed by:</strong> dgotrader_6</p></div>
           </article>
 
           <article class="dev-card">
-            <div class="thumb"><img src="./taquion.png" alt="Taquion — robot"></div>
-            <div class="dev-body">
-              <p class="dev-by"><strong>Developed by:</strong> dgotrader_6</p>
-            </div>
+            <div class="thumb"><img src="./taquion.png" alt="Taquion — robot" loading="lazy" decoding="async"></div>
+            <div class="dev-body"><p class="dev-by"><strong>Developed by:</strong> dgotrader_6</p></div>
           </article>
 
           <article class="dev-card">
-            <div class="thumb"><img src="./orion.png" alt="Orion — robot"></div>
-            <div class="dev-body">
-              <p class="dev-by"><strong>Developed by:</strong> dgotrader_6</p>
-            </div>
+            <div class="thumb"><img src="./orion.png" alt="Orion — robot" loading="lazy" decoding="async"></div>
+            <div class="dev-body"><p class="dev-by"><strong>Developed by:</strong> dgotrader_6</p></div>
           </article>
 
           <article class="dev-card">
-            <div class="thumb"><img src="./abyss.png" alt="Abyss — robot"></div>
-            <div class="dev-body">
-              <p class="dev-by"><strong>Developed by:</strong> dgotrader_6</p>
-            </div>
+            <div class="thumb"><img src="./abyss.png" alt="Abyss — robot" loading="lazy" decoding="async"></div>
+            <div class="dev-body"><p class="dev-by"><strong>Developed by:</strong> dgotrader_6</p></div>
           </article>
 
           <!-- be_profitable.fx -->
           <article class="dev-card">
-            <div class="thumb"><img src="./boson-nocturno.png" alt="Bosón Nocturno — robot"></div>
-            <div class="dev-body">
-              <p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p>
-            </div>
+            <div class="thumb"><img src="./boson-nocturno.png" alt="Bosón Nocturno — robot" loading="lazy" decoding="async"></div>
+            <div class="dev-body"><p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p></div>
           </article>
 
           <article class="dev-card">
-            <div class="thumb"><img src="./boson-diurno.png" alt="Bosón Diurno — robot"></div>
-            <div class="dev-body">
-              <p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p>
-            </div>
+            <div class="thumb"><img src="./boson-diurno.png" alt="Bosón Diurno — robot" loading="lazy" decoding="async"></div>
+            <div class="dev-body"><p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p></div>
           </article>
 
           <article class="dev-card">
-            <div class="thumb"><img src="./quantum-reversal.png" alt="Quantum Reversal — robot"></div>
-            <div class="dev-body">
-              <p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p>
-            </div>
+            <div class="thumb"><img src="./quantum-reversal.png" alt="Quantum Reversal — robot" loading="lazy" decoding="async"></div>
+            <div class="dev-body"><p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p></div>
           </article>
 
           <article class="dev-card">
-            <div class="thumb"><img src="./nexus.png" alt="Nexus — robot"></div>
-            <div class="dev-body">
-              <p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p>
-            </div>
+            <div class="thumb"><img src="./nexus.png" alt="Nexus — robot" loading="lazy" decoding="async"></div>
+            <div class="dev-body"><p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p></div>
           </article>
         </div>
       </section>
