--- a/desarrollos/index.html
+++ b/desarrollos/index.html
@@ -125,7 +125,7 @@
 
       <!-- Grid de proyectos -->
       <section class="panel" aria-labelledby="devs-title">
-        <h2 id="devs-title" style="margin:0 0 10px">Portafolio</h2>
+        <h2 id="devs-title" style="margin:0 0 10px">Algoritmos</h2>
 
         <div class="grid">
           <!-- dgotrader_6 -->
