--- a/logros/index.html
+++ b/logros/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DGO Trading — Logros</title>
-  <meta name="description" content="Payouts y certificados de fondeos aprobados.">
   <meta property="og:title" content="DGO Trading — Logros">
   <meta property="og:description" content="Capturas de resultados y certificaciones de fondeos.">
   <meta property="og:type" content="website">
@@ -128,7 +127,7 @@
 
       <!-- Payouts -->
       <section class="panel" aria-labelledby="payouts-title">
-        <h2 id="payouts-title" style="margin:0 0 10px">Payouts de fondeos</h2>
+        <h2 id="payouts-title" style="margin:0 0 10px">Payouts</h2>
         <div class="grid">
 
           <!-- Crea tantas tarjetas como quieras. 
@@ -178,7 +177,7 @@
 
       <!-- Certificados -->
       <section class="panel" aria-labelledby="certs-title">
-        <h2 id="certs-title" style="margin:0 0 10px">Certificados aprobados</h2>
+        <h2 id="certs-title" style="margin:0 0 10px">Certificados</h2>
         <div class="grid">
 
           <article class="cap-card">
