--- a/servicios/codifica-tu-estrategia.html
+++ b/servicios/codifica-tu-estrategia.html
@@ -95,7 +95,7 @@
         </p>
 
         <div style="display:flex; gap:12px; margin-top:12px; flex-wrap:wrap">
-          <a class="btn" href="https://t.me/diegotrader_6" target="_blank" rel="noopener">
+          <a class="btn" href="https://t.me/diegotrader6" target="_blank" rel="noopener">
             <svg viewBox="0 0 24 24" aria-hidden="true">
               <path d="M12 0C5.372 0 0 5.373 0 12s5.372 12 12 12 12-5.373 12-12S18.628 0 12 0zm5.802 7.651l-2.1 9.905c-.158.696-.572.866-1.158.54l-3.197-2.357-1.542 1.485c-.171.171-.314.314-.643.314l.229-3.241 5.897-5.321c.256-.229-.058-.358-.397-.129l-7.287 4.586-3.135-.98c-.681-.214-.696-.681.142-1.006l12.257-4.727c.572-.214 1.072.129.887 1.006z"/>
             </svg>
