--- a/servicios/copiador-de-senales.html
+++ b/servicios/copiador-de-senales.html
@@ -142,10 +142,7 @@
             <img src="./copiador.jpg" alt="Vista del Copiador de Señales">
           </div>
           <div>
-            <h2 style="margin-top:0">Descripción</h2>
-            <p>
-              Opera todo tu portafolio desde un solo origen, con consistencia y control, para escalar resultados sin multiplicar trabajo.
-            </p>
+            <h2 style="margin-top:0">Opera todo tu portafolio desde un solo origen, con consistencia y control, para escalar resultados sin multiplicar trabajo.</h2>
 
             <h3>Características</h3>
             <ul class="list">
