--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       #desarrollos{ order:3; }     /* Anuncio u otros bloques centrales */
       .left-menu{ order:10; }      /* Menú izquierdo después */
       .side-menu{ order:11; }      /* Menú derecho al final */
-    }
+      .card > footer{ order: 99; margin-top: 12px; }
 
     }
 
