--- a/desarrollos/index.html
+++ b/desarrollos/index.html
@@ -77,18 +77,23 @@
       display:flex; flex-direction:column;
     }
 
-    /* >>> Ajuste para ver la imagen completa <<< */
+    /* >>> Ajuste para ver la imagen más pequeña y proporcionada <<< */
     .thumb{
       width:100%;
-      aspect-ratio: 16 / 9;          /* Mantiene tarjetas uniformes */
+      /* antes: aspect-ratio: 16 / 9; */
+      height: clamp(110px, 16vw, 170px);   /* altura responsiva más baja */
       background:#0e162c;
       border-bottom:1px solid #1d2947;
       display:grid; place-items:center;
-      padding:10px;                  /* margen interno para que no pegue al borde */
+      padding:10px;                        /* margen interno */
     }
     .thumb img{
-      width:100%; height:100%;
-      object-fit:contain;            /* muestra toda la imagen sin recortar */
+      /* antes: width:100%; height:100%; */
+      max-height: 90%;                     /* limita el tamaño visible */
+      max-width: 100%;
+      width: auto;
+      height: auto;
+      object-fit: contain;                  /* sin recortes */
       display:block;
     }
 
