--- a/desarrollos/index.html
+++ b/desarrollos/index.html
@@ -77,23 +77,23 @@
       display:flex; flex-direction:column;
     }
 
-    /* >>> Ajuste para ver la imagen más pequeña y proporcionada <<< */
+    /* >>> Imágenes completas (sin recortes) y más pequeñas dentro del marco <<< */
     .thumb{
       width:100%;
-      /* antes: aspect-ratio: 16 / 9; */
-      height: clamp(110px, 16vw, 170px);   /* altura responsiva más baja */
+      aspect-ratio: 16 / 9;          /* tarjetas uniformes */
       background:#0e162c;
       border-bottom:1px solid #1d2947;
-      display:grid; place-items:center;
-      padding:10px;                        /* margen interno */
+      display:flex;                   /* centra el contenido */
+      align-items:center;
+      justify-content:center;
+      padding:10px;                   /* aire alrededor */
     }
     .thumb img{
-      /* antes: width:100%; height:100%; */
-      max-height: 90%;                     /* limita el tamaño visible */
-      max-width: 100%;
+      max-width: 85%;                 /* reducir tamaño visible */
+      max-height: 85%;                /* siempre cabe completa */
       width: auto;
       height: auto;
-      object-fit: contain;                  /* sin recortes */
+      object-fit: contain;            /* sin recortes */
       display:block;
     }
 
