--- a/servicios/copiador-de-senales.html
+++ b/servicios/copiador-de-senales.html
@@ -186,19 +186,17 @@
         <div class="pay-grid">
           <div>
             <h2 id="pay-title" style="margin:0 0 4px">Pago</h2>
-            <p class="subtle">Aceptamos USDT. Indica tu hash de pago para validar más rápido.</p>
+            <p class="subtle">Aceptamos USDT.</p>
 
             <h3 style="margin:14px 0 6px">USDT (TRC20)</h3>
             <div class="wallet">
               <code id="wallet">TSMsg3noEr7uVbSX18vihq37Brc2jPLE1z</code>
               <button class="btn" onclick="copyWallet()">Copiar</button>
             </div>
-            <p class="note" style="margin:8px 0 0">Al copiar la wallet, recuerda compartir tu hash de transacción para acelerar la validación.</p>
           </div>
 
           <!-- Columna derecha libre para crecer (manteniendo contenido) -->
           <div style="display:flex; align-items:center; justify-content:center; border:1px dashed rgba(255,255,255,.08); border-radius:12px; padding:12px; min-height:110px;">
-            <span class="muted">Información complementaria (opcional)</span>
           </div>
         </div>
       </section>
