--- a/servicios/copiador-de-senales.html
+++ b/servicios/copiador-de-senales.html
@@ -97,11 +97,10 @@
     .checklist svg{flex:0 0 18px; width:18px; height:18px; opacity:.9}
     .cta-row{display:flex; gap:12px; flex-wrap:wrap; margin-top:12px}
 
-    /* Pago */
+    /* Pago (bloque derecho removido) */
     .pay-grid{
-      display:grid; gap:14px; grid-template-columns: 1.2fr .8fr;
+      display:grid; gap:14px; grid-template-columns: 1fr;  /* ← una sola columna */
     }
-    @media (max-width: 980px){ .pay-grid{grid-template-columns: 1fr} }
     .wallet{
       display:flex; gap:10px; align-items:center; flex-wrap:wrap;
       background:#0e162c; border:1px solid #1d2947; border-radius:12px; padding:10px 12px;
@@ -150,7 +149,6 @@
             <h3 style="margin:10px 0 8px">Características</h3>
             <ul class="checklist">
               <li>
-                <!-- check icon -->
                 <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 2a10 10 0 1010 10A10.011 10.011 0 0012 2Zm4.3 7.3-5.01 5.01a1 1 0 01-1.42 0l-2.17-2.17a1 1 0 011.42-1.42l1.46 1.46 4.3-4.3A1 1 0 1116.3 9.3Z"/></svg>
                 <span>Stop Loss y Take Profit configurables, trailing stop y cierres parciales disponibles.</span>
               </li>
@@ -170,7 +168,6 @@
 
             <div class="cta-row">
               <a class="btn" href="https://t.me/diegotrader6" target="_blank" rel="noopener">
-                <!-- Telegram icon -->
                 <svg viewBox="0 0 24 24" aria-hidden="true" style="width:18px;height:18px;margin-right:8px;">
                   <path fill="currentColor" d="M12 0C5.372 0 0 5.373 0 12s5.372 12 12 12 12-5.373 12-12S18.628 0 12 0zm5.802 7.651l-2.1 9.905c-.158.696-.572.866-1.158.54l-3.197-2.357-1.542 1.485c-.171.171-.314.314-.643.314l.229-3.241 5.897-5.321c.256-.229-.058-.358-.397-.129l-7.287 4.586-3.135-.98c-.681-.214-.696-.681.142-1.006l12.257-4.727c.572-.214 1.072.129.887 1.006z"/>
                 </svg>
@@ -194,6 +191,8 @@
               <button class="btn" onclick="copyWallet()">Copiar</button>
             </div>
           </div>
+        </div>
+      </section>
 
       <!-- Footer -->
       <div class="footer">
