--- a/sistemas-de-apoyo/index.html
+++ b/sistemas-de-apoyo/index.html
@@ -207,6 +207,21 @@
         </ul>
       </section>
 
+          <!-- Libro 4 -->
+          <li class="book">
+            <div class="info">
+              <div class="icon" aria-hidden="true">
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                  <path d="M6 2h9a3 3 0 0 1 3 3v13a2 2 0 0 1-2 2H8a3 3 0 0 0-3 3V5a3 3 0 0 1 3-3zM8 6h8v2H8V6zm0 4h8v2H8v-2z"/>
+                </svg>
+              </div>
+              <a class="title" href="./trading-en-la-zona.pdf" target="_blank" rel="noopener">Trading en la Zona (PDF)</a>
+            </div>
+            <a class="btn small" href="./trading-en-la-zona.pdf" target="_blank" rel="noopener" aria-label="Abrir Trading en la Zona (PDF)">Abrir</a>
+          </li>
+        </ul>
+      </section>
+
       <div class="footer">
         © <span id="yr"></span> DGO Trading. Todos los derechos reservados.
       </div>
